# watch2give-polkadot-transfer

./: .gitignore  README.md
contracts/give_token/: Cargo.toml
contracts/give_token/src/: lib.rs
env/: pyvenv.cfg
scripts/: package-lock.json  package.json  polkadot-transfer.js  polkadot-transfer.txt
