[package]
name = "erc20"
version = "5.1.0"
edition = "2021"
publish = false

[dependencies]
ink = { version = "5.1.0", default-features = false }

[lib]
name = "erc20"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = ["ink/std"]
e2e-tests = []
ink-as-dependency = []
